--- a/src/less/main.less
+++ b/src/less/main.less
@@ -137,23 +137,25 @@ li {
   }
 }
 
-//.viewport {
-//  .ng-enter{
-//    .transition(all 1s ease-in-out);
-//    .transform(translate3d(100%, 0, 0));
-//    &.ng-enter-active{
-//      opacity: 1;
-//      .transform(translate3d(0, 0, 0));
-//    }
-//  }
-//  .ng-leave{
-//    .transition(all 1s ease-in-out);
-//    opacity: 1;
-//    &.ng-leave-active{
-//      opacity: 0;
-//    }
-//  }
-//}
+.viewport {
+  &.ng-enter{
+    .transition(all 2s ease-in-out);
+    .transform(translate3d(100%, 0, 0));
+    opacity: 0;
+    &.ng-enter-active{
+      opacity: 1;
+      .transform(translate3d(0, 0, 0));
+    }
+  }
+
+  &.ng-leave{
+    .transition(all 1s ease-in-out);
+    opacity: 1;
+    &.ng-leave-active{
+      opacity: 0;
+    }
+  }
+}
 
 @import "../app/home/home";
 @import "../app/detail/detail";
